--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-filter-search": "^1.0.8",
     "react-scripts": "3.2.0"
   },
   "scripts": {
