--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cheil-hotels",
   "version": "0.1.0",
   "private": true,
+  "main": "npm start",
   "dependencies": {
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
